fix code blocks on mobile

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -8,6 +8,12 @@
   --body-padding: 1rem;
 }
 
+@media (max-width: 1000px) {
+  code {
+    font-size: 14px;
+  }
+}
+
 * {
   box-sizing: border-box;
 }
@@ -38,7 +44,7 @@ aside {
 @media (max-width: 1500px) {
   aside {
     position: unset;
-    width: var(--main-content-width);
+    width: min(var(--main-content-width), 100vw - 2 * var(--body-padding));
     margin: 0 auto;
   }
 }
@@ -175,8 +181,4 @@ table th:last-child {
 
 table tr:last-child td {
   border-bottom: 1px solid;
-}
-
-code {
-  white-space: pre-wrap;
 }
